<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MySecurity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="wanted">Wanted persons</string>
    <string name="map">Map</string>
    <string name="emergency">Emergency Call</string>
      <string name="report">Report Tips</string>
      <string name="accident">Accident</string>
      <string name="assult">Assault/Abuse</string>
      <string name="disturbances">Disturbances</string>
      <string name="drugs">Drugs/Alcohol</string>
      <string name="harrasment">Harrasment</string>
      <string name="mentalhealth">Mental Health</string>
      <string name="suspecious">Suspecious Activity</string>
      <string name="vandalism">Vandalism</string>
      <string name="missing_person">Missing Person</string>
      <string name="property">Property</string>
      <string name="theft">Theft</string>
      <string name="crimedashmsg">Make a Report</string>
      <string name="video">Take Video</string>
      <string name="pic">Picture</string>
      <string name="audio">Record Audio</string>
      <string name="crimedescrip">Enter  crime description details e.g It was a gang of  three ....</string>
    <string name="persondescrip">Enter Person description details e.g name,contacts, id num ..</string>
    <string name="reportmissn">Report Missing Person</string>
      <string name="sendreport">Send</string>
      <string name="anonimity">Send Anonimously</string>
      <string name="tipdetails">Add Tip Details</string>
      <string name="corruption">Corruption</string>
      <string name="wantedlist">Most Wanted List </string>
      <string name="wantedperson">List is Empty</string>
      <string name="wantedthreatsate">No data Feched </string>

    <string name="profile_button">Set Profile </string>
    <string name="email">Email Address</string>
    <string name="tel">Phone number </string>
    <string name="fullname">Full Names </string>
`    <string name="county">County </string>
    <string name="Constituency">Constituency </string>
    <string name="Estate">Estate </string>
    <string name="instruction">Set your Current Place of Residence </string>

     <string name="emergencystatus">Select Emergency status</string>
    <string name="sendemergency">Send Emergency</string>
    <string name="makinemergcal">Emergency Contacts</string>
    <string name="social">Twitter handle: e.g @username</string>
    <string name="emercontact">Contacts</string>
    <string name="organization">Organization Name</string>
    <string name="descriptionguide">Indicate details of this persons whereabouts</string>

    <string name="sharefb">facebook</string>
    <string name="sharetwitter">twitter</string>



    <!-- Classes names -->
    <string name="userProfle">Profile</string>
    <string name="wantedpersonclass">Wanted Persons</string>
    <string name="dashboad">Welcome</string>
    <string name="crimeDash">Crimes</string>



    <string-array name="counties">
        <item >Nairobi</item>
        <item >Kisumu</item>
        <item >Mombasa</item>
        <item >Nakuru</item>
        <item >Kakamega</item>
        <item >Trans nzoia</item>
        <item >Bungoma</item>
        <item >Uasin Gishu</item>
        <item >Kericho</item>
        <item >Machakos</item>
        <item >Taita Taveta</item>
        <item >Kitale</item>
        <item >Garissa</item>
    </string-array>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >My Activity</item>
        <item >Hotspots</item>
        <item >Add Friend</item>
        <item >Profile</item>
        <item >Help</item>
        <item >Missing Persons</item>
    </string-array>
    <!-- Nav Drawer Menu Items -->
    <string-array name="emegencylist">
        <item >Normal</item>
        <item >Emergency</item>
    </string-array>

    <string-array name="gender">
        <item >Male</item>
        <item >Female</item>
    </string-array>
    <string-array name="choicelocatn">
        <item >Default Location</item>
        <item >Current Location</item>
    </string-array>
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_hostpots</item>
        <item>@drawable/ic_home</item>
    <item>@drawable/ic_profile</item>
    <item>@drawable/ic_home</item>
      <item>@drawable/ic_home</item>
           </array>
     
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="action_about">About</string>
    <string name="action_term_use">Term of use</string>
    <string name="action_privacy">Privacy Policy</string>
    <string name="action_copyright">Copyright</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_follow">Share</string>
    <string name="gender">Select Gender</string>
    <string name="identity">id/passport</string>
    <string name="share">Share On social media</string>
    <string name="hotspot">Select View creteria</string>


</resources>
