<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/share"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:textSize="18sp"
        android:id="@+id/textView"/>

    <Button
        android:id="@+id/btntwitter"
        style="@style/buttonsreport"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:text="@string/sharetwitter"
        android:background="@color/twitterblue"

       />

    <Button
        style="@style/buttonsreport"
        android:text="@string/sharefb"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:id="@+id/btnfacebook"
        android:background="@color/fbblue"

         />
</LinearLayout>